# course_work_4

./: README.txt  pyproject.toml
classes/: api.py  jsonhandler.py  vacancies.py
src/: functions.py  hh_data.json  main.py  superjob_data.json  variables.py
