[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["SerjMonstrX <SerjMonstrX@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"